[workspace]
resolver = "2"

members = [
    "game1",
    "game5",
    "ex_liquidity_pool",
    "ex_token",
]

[dev_dependencies]
soroban-sdk = { version = "0.8.4", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "0.8.4"